view ly do huy hd luong xu ly hd

--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -20,10 +20,12 @@
           <span style="color: dimgray" *ngIf="d.typeOfSign">Loại ký: {{d.typeOfSign.name ? d.typeOfSign.name : ''}}</span>
         </div>
         <div class="col-md-6" style="display: flex; flex-direction: column;text-align: center">
-          <span [style.color]="d.status != 0 ? '#106DB6' : '#545252'">{{d.status}}</span>
-          <div class="div_icon" *ngIf="d.status == 3">
-            <img src="../../assets/img/icon_file.svg" class="img_icon" ngbTooltip="Lý do từ chối hợp đồng"/>
+          <div style="display: flex; justify-content: center;">
+          <span [style.color]="d.status != 0 ? '#106DB6' : '#545252'">{{d.status}}</span> &nbsp; &nbsp;
+          <div class="div_icon" *ngIf="d.status == 'Đã từ chối'">
+            <img src="../../assets/img/icon_file.svg" class="img_icon" ngbTooltip="Lý do từ chối hợp đồng" (click)="viewReasonRejected()"/>
           </div>
+        </div>
           <span style="color: #8B8B8B" *ngIf="d.process_at">({{d.process_at}})</span>
         </div>
       </div>
@@ -31,6 +33,9 @@
   </div>
 
 </div>
+<app-view-reason-rejected-dialog [isVisibleReasonReject]="isVisibleReasonReject" (modalState)="toggleModalReasonReject($event)">
+
+</app-view-reason-rejected-dialog>
 
 <div class="footer-btn" style="text-align: center; margin-top: 20px">
   <button style="width: 120px; height: 40px; background-color: #8B8B8B; border-radius: 5px; outline: none; color: white; border: 1px solid #8B8B8B" (click)="acceptRequest()">Thoát</button>
