--- a/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
+++ b/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
@@ -2,6 +2,7 @@
      style="width: 140px;min-height: 30px; display: flex; font-size: 9px">
   <div class="signature-content"
        style="margin-left: 6px; color: #0872C9;line-height: 10px; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
+    <div style="z-index: 2; text-align: left;">Loại ký: Ký ảnh và OTP</div>
     <div style="z-index: 2; text-align: left;">Người ký: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</div>
     <div style="z-index: 2; text-align: left;">Ngày ký: {{isDateTime}}</div>
   </div>
