xxem ly do tu choi hop dong

--- a/src/app/main/contract-signature/shared/model/dialog-reason-rejected/dialog-reason-rejected.component.html
+++ b/src/app/main/contract-signature/shared/model/dialog-reason-rejected/dialog-reason-rejected.component.html
@@ -2,7 +2,7 @@
     <h3 style="text-align: center; color: #106db6;">LÝ DO TỪ CHỐI HỢP ĐỒNG</h3>
     <div style="max-height: 405px; overflow: auto; font-size: 14px;">
         <div style="text-align: center;">
-            <span>{{this.reasonReject}}</span>
+            <span>{{data.reasonReject}}</span>
         </div>
     </div>
 
