--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -110,7 +110,7 @@
                                 <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.contractId);" />
                             </div>
                             <div class="div_icon" *ngIf="item.contractStatus == 32">
-                                <img src="../../assets/img/icon_file.svg" class="img_icon" ngbTooltip="Lý do hủy hợp đồng" (click)="ViewReasonCancel(item.id)" />
+                                <img src="../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="Lý do hủy hợp đồng" (click)="ViewReasonCancel(item.contractId)" />
                             </div>
                         </div>
                     </div>
