fix bug sai text ngày ký ký sim pki

--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -40,7 +40,7 @@
     <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: Ký số bằng sim pki</span>
     <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Người ký: {{nameCompany}}</span>
     <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Số điện thoại: {{phonePKI}}</span>
-    <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">SNgày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+    <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
   </div>
 </div>
 
