--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -11,82 +11,100 @@
             </div>
         </div>
 
-        <div class="row list_header" *ngIf="pageTotal > 0;">
+        <div>
+            <div *ngIf="this.filter_status == 20 || this.filter_status == 33" class="col-md-1 btn_search" style="padding-top: 10px;">
+                <button (click)="cancelMany()" class="btn btn-lg btn-block btn_submit">{{'Huỷ'| translate}}</button>
+            </div>
+        </div>
 
-            <div class="col-md-5"></div>
+        <div class="row list_header" *ngIf="pageTotal > 0;">
+            <div class="col-md-4"></div>
             <div class="col-md-2">{{'create-date' | translate}}</div>
             <div class="col-md-2">{{'expiration-date' | translate}}</div>
             <div class="col-md-3">{{'action' | translate}}</div>
         </div>
 
         <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
+                <div class="row">
+                    <!--Cột 1-->
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-11">                                 
+                                <div class="item_contract_name" (click)="isQLHD_07?openDetail(item.id):null">{{item.name}}</div>
 
-            <div class="row">
+                                <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                                    <div class="item_contract_infor">Bên {{getNameOrganization(itemPar, index)}}</div>
+                                </div>
 
-                <!--Cột 1-->
-                <div class="col-md-5">
-                    <div class="row">
-                        <div class="col-md-12 item_contract_name" (click)="isQLHD_07?openDetail(item.id):null">{{item.name}}</div>
+                                <div class="row">
+                                    <div class="item_contract_infor">{{'contract.status' | translate}}:
+                                        <span class="status_blue">{{item.status | pipe | translate}} {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) | translate}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
-                        <div class="col-md-12 item_contract_infor">Bên {{getNameOrganization(itemPar, index)}}</div>
+
+                    <!--Cột 2: Ngày tạo-->
+                    <div class="col-md-2 calendar_create">
+                        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span></div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12 item_contract_infor">{{'contract.status' | translate}}:
-                            <span class="status_blue">{{item.status | pipe | translate}} {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) | translate}}</span>
+
+                    <!--Cột 3: Ngày hết hạn ký-->
+                    <div class="col-md-2 calendar_deadline">
+                        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date: 'dd/MM/yyyy'}}</span></div>
+                    </div>
+
+                    <!--Cột 4: Thao tác-->
+                    <div class="col-md-3 item_icon">
+                        <div *ngIf="isOrg=='off'" style="display: flex; justify-content: center;">
+                            <div class="div_icon" *ngIf="(status == 'draft' || status == 'processing' || status == 'expire' || status == 'overdue') && isQLHD_08">
+                                <img src="../../assets/img/icon_copy.svg" class="img_icon" ngbTooltip="{{'contract.copy' | translate}}" (click)="openCopy(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'draft' && isQLHD_02">
+                                <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="openEdit(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'draft'">
+                                <img src="../../assets/img/icon_delete.svg" class="img_icon" ngbTooltip="{{'contract.delete' | translate}}" (click)="deleteContract(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'complete') && isQLHD_12">
+                                <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}" (click)="contractConnect(item.id)" />
+                            </div>
+                            <!-- 
+                            <div class="div_icon" *ngIf="status == 'processing' || status == 'expire'">
+                                <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnect(item.id)"/>
+                            </div> -->
+                            <div class="div_icon" *ngIf="status == 'complete' && isQLHD_11">
+                                <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnectNew(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire') && isQLHD_09">
+                                <img src="../../assets/img/icon_stop.svg" class="img_icon" ngbTooltip="{{'contract.cancel' | translate}}" (click)="cancelContract(item.id);" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'complete'">
+                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13">
+                                <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'cancel'">
+                                <img src="../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="Lý do hủy hợp đồng" (click)="ViewReasonCancel(item.id)" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Cột 5: Input checkbox-->
+                    <div class="col-md-1 item_icon">
+                        <div style="display: flex; justify-content: center;">
+                            <div class="div_icon">
+                                <div class="col-md-1 calendar_create">
+                                    <div>
+                                        <input name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked" />
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <!--Cột 2: Ngày tạo-->
-                <div class="col-md-2 calendar_create">
-                    <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span></div>
-                </div>
-
-                <!--Cột 3: Ngày hết hạn ký-->
-                <div class="col-md-2 calendar_deadline">
-                    <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date: 'dd/MM/yyyy'}}</span></div>
-                </div>
-
-                <div class="col-md-3 item_icon">
-                    <div *ngIf="isOrg=='off'" style="display: flex; justify-content: center;">
-                        <div class="div_icon" *ngIf="(status == 'draft' || status == 'processing' || status == 'expire' || status == 'overdue') && isQLHD_08">
-                            <img src="../../assets/img/icon_copy.svg" class="img_icon" ngbTooltip="{{'contract.copy' | translate}}" (click)="openCopy(item.id)" />
-                        </div>
-                        <div class="div_icon" *ngIf="status == 'draft' && isQLHD_02">
-                            <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="openEdit(item.id)" />
-                        </div>
-                        <div class="div_icon" *ngIf="status == 'draft'">
-                            <img src="../../assets/img/icon_delete.svg" class="img_icon" ngbTooltip="{{'contract.delete' | translate}}" (click)="deleteContract(item.id)" />
-                        </div>
-                        <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'complete') && isQLHD_12">
-                            <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}" (click)="contractConnect(item.id)" />
-                        </div>
-                        <!-- 
-                        <div class="div_icon" *ngIf="status == 'processing' || status == 'expire'">
-                            <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnect(item.id)"/>
-                        </div> -->
-                        <div class="div_icon" *ngIf="status == 'complete' && isQLHD_11">
-                            <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnectNew(item.id)" />
-                        </div>
-                        <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire') && isQLHD_09">
-                            <img src="../../assets/img/icon_stop.svg" class="img_icon" ngbTooltip="{{'contract.cancel' | translate}}" (click)="cancelContract(item.id);" />
-                        </div>
-                        <div class="div_icon" *ngIf="status == 'complete'">
-                            <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
-                        </div>
-                        <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13">
-                            <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
-                        </div>
-                        <div class="div_icon" *ngIf="status == 'cancel'">
-                            <img src="../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="Lý do hủy hợp đồng" (click)="ViewReasonCancel(item.id)" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="row" *ngIf="status == 'cancel' || status == 'fail'">
-        <div class="col-md-12 item_contract_infor">Lý do: {{item.reason_reject}}</div>
-      </div> -->
         </div>
 
         <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
