show lỗi khi huỷ nhiều hợp đồng lỗi

--- a/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
+++ b/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
@@ -7,3 +7,15 @@
     <div style="z-index: 2; text-align: left;">Ngày ký: {{isDateTime}}</div>
   </div>
 </div>
+
+
+<!-- <div class="signature-container" id="export-signature-image-html"
+     style="min-height: 80px; display: flex; font-size: 9px; background-color: white;">
+  <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+  <div class="signature-content"
+       style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: Ký ảnh và otp</span>
+    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Người ký: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</span>
+    <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime}}</span>
+  </div>
+</div> -->
