--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -2,8 +2,8 @@
     <h3 style="text-align: center; color: #106DB6">{{'contract_processing_flow' | translate}}</h3>
     <div style="max-height: 405px; overflow: auto;font-size: 14px">
         <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
-            <div class="col-md-6" style="display: flex; flex-direction: column;text-align: left;">
-                <span>{{this.personCreate}}</span>
+            <div class="col-md-6" style="flex-direction: column;text-align: left;">
+                <span>{{this.personCreate}}</span> &nbsp;
                 <span style="color: #8B8B8B">({{this.emailCreate}})</span>
             </div>
             <div class="col-md-6" style="display: flex; flex-direction: column;text-align: center">
@@ -14,16 +14,18 @@
         <div *ngFor="let d of is_list_name">
             <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
                 <div class="col-md-6" style="display: flex; flex-direction: column;text-align: left;">
-                    <span>{{d.name}}</span>
+                    <div style="display: flex;">
+                    <span>{{d.name}}</span> &nbsp;&nbsp;
                     <span style="color: #8B8B8B" *ngIf="d.emailRecipients">({{d.emailRecipients}})</span>
+                    </div>
                     <span style="color: #8B8B8B" *ngIf="d.name_company">{{d.name_company}}</span>
                     <span style="color: dimgray" *ngIf="d.typeOfSign">Loại ký: {{d.typeOfSign.name ? d.typeOfSign.name : ''}}</span>
                 </div>
                 <div class="col-md-6" style="display: flex; flex-direction: column;text-align: center">
                     <div style="display: flex; justify-content: center;">
-                        <span [style.color]="d.status != 0 ? '#106DB6' : '#545252'">{{d.status}}</span> &nbsp; &nbsp;
-                        <div class="div_icon" style="width: 20px;"  *ngIf="d.status == 'Đã từ chối'" >
-                            <img src="../../../../../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="Lý do từ chối hợp đồng" (click)="viewReasonRejected(d.id)" />
+                        <span [style.color]="d.status === 'Đã từ chối' ? '#d11919' : d.status !== 0 ? '#106DB6' : '#545252'">{{d.status}}</span> &nbsp;
+                        <div class="div_icon" style="width: 90px;"  *ngIf="d.status == 'Đã từ chối'" >
+                            <a class="img_icon" ngbTooltip="Lý do từ chối hợp đồng" (click)="viewReasonRejected(d.id)">( Xem lý do )</a>
                         </div>
                     </div>
                     <span style="color: #8B8B8B" *ngIf="d.process_at">({{d.process_at}})</span>
