--- a/src/app/main/contract-signature/shared/model/dialog-reason-cancel/dialog-reason-cancel.component.html
+++ b/src/app/main/contract-signature/shared/model/dialog-reason-cancel/dialog-reason-cancel.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <h3 style="text-align: center; color: #106db6;">LÝ DO HỦY BỎ HỢP ĐỒNG</h3>
     <div style="max-height: 405px; overflow: auto; font-size: 14px;">
-        <div style="text-align: center;">
+        <div style="text-align: center; word-break: break-word;">
             <span>{{this.reasonCancel}}</span>
         </div>
     </div>
