--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -47,7 +47,7 @@
                 <div class="col-md-2 calendar_deadline">
                     <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date: 'dd/MM/yyyy'}}</span></div>
                 </div>
-
+                <!--Cột 4: Thao tác -->
                 <div class="col-md-3 item_icon">
                     <div *ngIf="isOrg=='off'" style="display: flex; justify-content: center;">
                         <div class="div_icon" *ngIf="(status == 'draft' || status == 'processing' || status == 'expire' || status == 'overdue') && isQLHD_08">
@@ -78,6 +78,11 @@
                         <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13">
                             <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
                         </div>
+                        <div class="div_icon" *ngIf="status == 'cancel'">
+                            <img src="../../assets/img/cancel_notes.svg" class="img_icon" ngbTooltip="Lý do hủy hợp đồng" (click)="ViewReasonCancel(item.id)" />
+                        </div>
+                    </div>
+                    <div *ngIf="isOrg=='on'" style="display: flex; justify-content: center;">
                         <div class="div_icon" *ngIf="status == 'cancel'">
                             <img src="../../assets/img/cancel_notes.svg" class="img_icon" ngbTooltip="Lý do hủy hợp đồng" (click)="ViewReasonCancel(item.id)" />
                         </div>
