--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -18,7 +18,7 @@
                     <span>{{d.name}}</span> &nbsp;&nbsp;
                     <span style="color: #8B8B8B" *ngIf="d.emailRecipients">({{d.emailRecipients}})</span>
                     </div>
-                    <span style="color: #8B8B8B" *ngIf="d.name_company">{{d.name_company}}</span>
+                    <span style="color: #8B8B8B" *ngIf="d.type != 3 && d.name_company">{{d.name_company}}</span>
                     <span style="color: dimgray" *ngIf="d.typeOfSign">Loại ký: {{d.typeOfSign.name ? d.typeOfSign.name : ''}}</span>
                 </div>
                 <div class="col-md-6" style="display: flex; flex-direction: column;text-align: center">
