Thêm mã hợp đồng vào thông tin chi tiết

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -5,6 +5,10 @@
       <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">THÔNG TIN CHI TIẾT HỢP ĐỒNG</div>
       <div style="line-height: 25px">
         <div>
+          <span class="title-contract">Mã hợp đồng:</span>
+          <span>{{datas?.is_data_contract?.contract_uid}}</span>
+        </div>
+        <div>
           <span class="title-contract">Loại hợp đồng:</span>
           <span>{{datas?.is_data_contract?.type_name}}</span>
         </div>
