commit before deploy

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -4,10 +4,10 @@
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
       <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">THÔNG TIN CHI TIẾT HỢP ĐỒNG</div>
       <div style="line-height: 25px">
-        <div>
+        <!-- <div>
           <span class="title-contract">Mã hợp đồng:</span>
           <span>{{datas?.is_data_contract?.contract_uid}}</span>
-        </div>
+        </div> -->
         <div>
           <span class="title-contract">Loại hợp đồng:</span>
           <span>{{datas?.is_data_contract?.type_name}}</span>
