--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -1,9 +1,9 @@
 <div class="signature-container" id="export-html"
-     style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
+     style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
   <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
   <div class="signature-content"
        style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-    <div style="z-index: 2;text-align: left;">Loại ký: Ký số bằng usb token</div>
+    <div style="z-index: 2;text-align: left;">Loại ký: Ký số bằng USB Token</div>
     <div style="z-index: 2;text-align: left;">Ký bởi: {{nameCompany}}</div>
     <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
   </div>
@@ -25,7 +25,7 @@
 <div id="export-html-hsm1"  style="min-height: 80px;display: flex; font-size: 9px">
   <img style="width: 30px"  src="assets/img/tick_signature.svg" alt="duongdt.vn">
   <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: Ký số bằng hsm</span>
+    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: Ký số bằng HSM</span>
     <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Mã số thuế: {{cardId}}</span>
     <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
   </div>
