--- a/src/app/main/contract/dialog/cancel-contract-dialog/cancel-contract-dialog.component.scss
+++ b/src/app/main/contract/dialog/cancel-contract-dialog/cancel-contract-dialog.component.scss
@@ -60,4 +60,13 @@
 .invalid{
     color: red;
 }
+textarea{
+    word-wrap:break-word; 
+    width: 100%; 
+    height: 70px;
+    border-radius: 0.4rem;
+}
+textarea:focus-visible{
+    outline: none;
+}
   
