--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -33,6 +33,20 @@
       </div>
     </div>
 
+    <div class="name-item" *ngIf="isReqCardIdToken">
+      <div class="label_item">Mã số thuế/CMT/CCCD <span class="require_star">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+      <div class="input-data">
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="card_id" class="input-text">
+      </div>
+    </div>
+
+    <div class="name-item" *ngIf="isReqCardIdHsm">
+      <div class="label_item">Mã số thuế <span class="require_star">*</span></div>
+      <div class="input-data">
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="card_id" class="input-text">
+      </div>
+    </div>
+
     <div class="select-option">
       <button
         class="dx-button-form dx-button-close dx-button-90"
